--- a/krysa.kv
+++ b/krysa.kv
@@ -32,7 +32,8 @@
 
     BoxLayout:
         Splitter:
-            size_hint: 0.1, None
+            size_hint: None, None
+            min_size: dp(150)
             height: root.height - dp(37)
             sizable_from: 'right'
             rescale_with_parent: True
@@ -61,7 +62,7 @@
 
         TabbedPanel:
             id: tabpanel
-            tab_pos: 'right_mid'
+            tab_pos: 'bottom_mid'
             do_default_tab: False
             size_hint_y: None
             height: root.height - dp(37)
@@ -153,6 +154,7 @@
 
             TextInput:
                 id: name
+                hint_text: 'example.sqlite' if root.dirs else ''
                 disabled: not root.dirs
 
             CheckBox:
@@ -169,7 +171,7 @@
             Button:
                 text: root.confirm
                 on_release:
-                    if name.text: root.run(view.selection[0], name.text)
+                    if name.text: root.run(view.selection, name.text)
                     elif name.disabled: root.run(view.selection[0], lbl.active)
 
 <Task>:
@@ -180,6 +182,7 @@
         BoxLayout:
             Spinner:
                 id: tablesel
+                text: 'Choose data:'
                 values: [child[0] for child in app.root.tables]
                 on_text:
                     root.tablenum = root.get_table_pos(self.text, self.values)
@@ -210,3 +213,11 @@
         id: name
     TextInput:
         id: order
+
+<StripLayout>
+    canvas:
+        Color:
+            rgba: 1, 1, 1, 0.8
+        Rectangle:
+            size: self.size
+            pos: self.pos
