Fix typos, add docs

--- a/krysa.kv
+++ b/krysa.kv
@@ -438,7 +438,7 @@
 
 <PageBox>:
     size_hint: None, None
-    size: dp(597), dp(884)  # A4 72dpi
+    size: dp(595), dp(914)  # A4 72dpi 595x842
     orientation: 'vertical'
     BoxLayout:
         Widget:
