--- a/KrySA/krysa.kv
+++ b/KrySA/krysa.kv
@@ -57,10 +57,10 @@
                             size_hint_y: None
                             height: dp(26)
                             ImgButton:
-                                source: 'clock.png'
+                                source: 'data/clock.png'
                                 on_release: taskpanel.current = 'recent'
                             ImgButton
-                                source: 'star.png'
+                                source: 'data/star.png'
                                 on_release: taskpanel.current = 'favorite'
                         ScreenManager:
                             id: taskpanel
