--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -2,6 +2,10 @@ code.xref {
     font-family: 'goudy old style', 'minion pro', 'bell mt', Georgia, 'Hiragino Mincho Pro', serif;
 }
 
+pre {
+    padding: 7px 10px;
+}
+
 dl dl pre {
     margin-left: 0;
     padding-left: 30px;
