--- a/krysa/tasks/tasks.kv
+++ b/krysa/tasks/tasks.kv
@@ -172,3 +172,9 @@
             CheckBox:
                 id: cumulative
                 active: True
+
+<SortLayout>:
+    Spinner:
+        id: sort_type
+        text: 'Sort type'
+        values: ['Ascending', 'Descending', 'Nothing']
