Add result to sorting

--- a/krysa/tasks/tasks.kv
+++ b/krysa/tasks/tasks.kv
@@ -177,4 +177,4 @@
     Spinner:
         id: sort_type
         text: 'Sort type'
-        values: ['Ascending', 'Descending', 'Nothing']
+        values: ['Ascending', 'Descending']
