--- a/krysa/tasks/tasks.kv
+++ b/krysa/tasks/tasks.kv
@@ -178,3 +178,14 @@
         id: sort_type
         text: 'Sort type'
         values: ['Ascending', 'Descending']
+
+<AppendLayout>:
+    Spinner:
+        id: what
+        text: 'Append type'
+        values: ['Rows', 'Columns']
+
+    SingleTI:
+        id: amount
+        hint_text: 'amount'
+        input_filter: 'int'
